force-app/main/default/objects/User/fields/B2B_Account_Customer_Service_Telephone__c.field-meta.xml
<CustomField>
    <fullName>B2B_Account_Customer_Service_Telephone__c</fullName>
    <description>This field store the values of account&apos;s customer service telephone.</description>
    <formula>Contact.Account.B2B_Customer_Service_Telephone_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>B2B Account Customer Service Telephone</label>
    <type>Text</type>
</CustomField>