force-app/main/default/objects/User/fields/B2B_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>B2B_Account_Name__c</fullName>
    <description>Related Account Name</description>
    <formula>Contact.Account.Name</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>