force-app/main/default/objects/User/fields/B2B_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>B2B_Account_Number__c</fullName>
    <description>Related Account Number</description>
    <formula>Contact.Account.k_Account_No__c</formula>
    <label>Account #</label>
    <type>Text</type>
</CustomField>