force-app/main/default/objects/User/fields/B2B_Brand_content_Evil_Eye__c.field-meta.xml
<CustomField>
    <fullName>B2B_Brand_content_Evil_Eye__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brand content Evil Eye</label>
    <type>Checkbox</type>
</CustomField>