force-app/main/default/objects/User/fields/B2B_Brand_content_Neubau_Mapping__c.field-meta.xml
<CustomField>
    <fullName>B2B_Brand_content_Neubau_Mapping__c</fullName>
    <description>The mapping value for &quot;Neubau&quot; for Mediahub is stored here</description>
    <label>B2B Brand content Neubau Mapping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>