force-app/main/default/objects/User/fields/B2B_Brand_content_Silhouette__c.field-meta.xml
<CustomField>
    <fullName>B2B_Brand_content_Silhouette__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brand content Silhouette</label>
    <type>Checkbox</type>
</CustomField>