force-app/main/default/objects/User/fields/B2B_Country_Code_ARIS_ID__c.field-meta.xml
<CustomField>
    <fullName>B2B_Country_Code_ARIS_ID__c</fullName>
    <description>This field will be send to mediahub via SAML</description>
    <label>Country Code ARIS ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>