force-app/main/default/objects/User/fields/B2B_EE_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>B2B_EE_Account_Status__c</fullName>
    <description>This field will be send to mediahub via SAML</description>
    <label>EE Account Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>