force-app/main/default/objects/User/fields/B2B_Mediahub_User_Groups__c.field-meta.xml
<CustomField>
    <fullName>B2B_Mediahub_User_Groups__c</fullName>
    <description>This field stores the all the values that are needed for SAML</description>
    <formula>IF(NOT(ISBLANK(B2B_SH_Account_Status__c)),B2B_SH_Account_Status__c,&quot;0&quot;) &amp;&quot;,&quot;&amp;
        IF(NOT(ISBLANK(B2B_EE_Account_Status__c)),B2B_EE_Account_Status__c,&quot;0&quot;) &amp;&quot;,&quot;&amp;
        IF(NOT(ISBLANK(B2B_NB_Account_Status__c)),B2B_NB_Account_Status__c,&quot;0&quot;) &amp;&quot;,&quot;&amp;
        IF(NOT(ISBLANK(B2B_Country_Code_ARIS_ID__c)),B2B_Country_Code_ARIS_ID__c,&quot;0&quot;) &amp;&quot;,&quot;&amp;
        IF(NOT(ISBLANK(B2B_Brand_content_Silhouette_Mapping__c)),B2B_Brand_content_Silhouette_Mapping__c,&quot;0&quot;) &amp;&quot;,&quot;&amp;
        IF(NOT(ISBLANK(B2B_Brand_content_Evil_Eye_Mapping__c)),B2B_Brand_content_Evil_Eye_Mapping__c,&quot;0&quot;) &amp;&quot;,&quot;&amp;
        IF(NOT(ISBLANK(B2B_Brand_content_Neubau_Mapping__c)),B2B_Brand_content_Neubau_Mapping__c,&quot;0&quot;) &amp;&quot;,&quot;&amp;
        IF(NOT(ISBLANK(B2B_User_Type_Mapping__c)),B2B_User_Type_Mapping__c,&quot;0&quot;)</formula>
    <label>Mediahub User Groups</label>
    <type>Text</type>
</CustomField>