force-app/main/default/objects/User/fields/B2B_Shop_Username__c.field-meta.xml
<CustomField>
    <fullName>B2B_Shop_Username__c</fullName>
    <description>B2B shop username of related Account.</description>
    <formula>Contact.Account.k_B2B_Shop_Username__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>B2B Shop Username</label>
    <type>Text</type>
</CustomField>