force-app/main/default/objects/User/fields/B2B_User_Type__c.field-meta.xml
<CustomField>
    <fullName>B2B_User_Type__c</fullName>
    <description>This field is used to identify user types.</description>
    <label>User Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>ECP of a Distributor</fullName>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Press</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>