force-app/main/default/objects/User/fields/B2B_User_Type_Mapping__c.field-meta.xml
<CustomField>
    <fullName>B2B_User_Type_Mapping__c</fullName>
    <description>The mapping value for &quot;User Type&quot; for Mediahub is stored here</description>
    <label>B2B User Type Mapping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>